re PR c++/16716 (ICE in cp_parser_parse_and_diagnose_invalid_type_name)

PR c++/16716
	* parser.c (cp_parser_parse_and_diagnose_invalid_type_name):
	Robustify.

	PR c++/17327
	* pt.c (unify): Add ENUMERAL_TYPE case.  Replace sorry with
	gcc_unreacable.

	PR c++/16716
	* g++.dg/parse/crash17.C: New test.

	PR c++/17327
	* g++.dg/template/enum3.C: New test.

From-SVN: r87467